5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1758_1183.log
== SUBMITION (2019-05-28 11:09:31) 
-- CODE:
from numpy import*
vetor = array(eval(input("informe o vetor: ")))
i = 0
n = 0
p = 0
while(i<size(vetor)):
	if r[i]>0
		p = p + 1
	else:
		n = n + 1
	i = i + 1
lista_valida = zeros(p, dtype=int)
e = 0
a = 0
while(a<size(lista_valida)):
	if(vetor[a]>=0)
		lista_valida[a] = vetor[e]
		a = a + 1
		e = e + 1
	else:
		e = e + 1
print(lista_valida)
		
		


-- EXECUTION TIME:
0.151861
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 7
    if r[i]>0
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:10:00) 
-- CODE:
from numpy import*
vetor = array(eval(input("informe o vetor: ")))
i = 0
n = 0
p = 0
while(i<size(vetor)):
	if r[i]>0
		p = p + 1
	else:
		n = n + 1
	i = i + 1
lista_valida = zeros(p, dtype=int)
e = 0
a = 0
while(a<size(lista_valida)):
	if(vetor[a]>0)
		lista_valida[a] = vetor[e]
		a = a + 1
		e = e + 1
	else:
		e = e + 1
print(lista_valida)
		
		


-- EXECUTION TIME:
0.145334
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 7
    if r[i]>0
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:18) 
-- CODE:
from numpy import*
vetor = array(eval(input("informe o vetor: ")))
i = 0
n = 0
p = 0
while(i<size(vetor)):
	if r[i]>0
		p = p + 1
	else:
		n = n + 1
	i = i + 1
lista_valida = zeros(p, dtype=int)
e = 0
a = 0
while(a<size(lista_valida)):
	if(vetor[a]>0)
		lista_valida[a] = vetor[e]
		a = a + 1
		e = e + 1
	else:
		e = e + 1
print(lista_valida)
		
		


-- ERROR:
File "XXXX", line 7
    if r[i]>0
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
